fix(core-css-reset): make default letter spacing -0.8px

--- a/src/scss/foundation/_global.scss
+++ b/src/scss/foundation/_global.scss
@@ -14,6 +14,7 @@
   text-rendering: optimizeLegibility;
 
   font: inherit;
+  letter-spacing: -0.8px;
 
   &::before,
   &::after {
